# Mauve

./: README.md
mauve/build_scripts/: build_linux_x64.sh  build_osx.sh  build_osx_10.3.sh  build_win.bat  release_build.sh  release_source.sh  snapshot.sh
mauve/build_scripts/.svn/: wc.db
mauve/libGenome/.svn/: wc.db
mauve/libMems/: configure.ac
mauve/libMems/.svn/: wc.db
mauve/libMems/libMems/: CompactGappedAlignment.h  Files.h  Makefile.am
mauve/libMems/libMems/HomologyHMM/: homology.h
mauve/mauve/: ChangeLog.html  build.number
mauve/mauve/.svn/: wc.db
mauve/mauve/src/org/gel/mauve/gui/: Mauve.java
mauve/mauveAligner/.svn/: wc.db
mauve/muscle/.svn/: wc.db
mauve/sgEvolver/: ChangeLog  autogen.sh  configure.ac
mauve/sgEvolver/.svn/: wc.db
mauve/sgEvolver/projects/: scoreAlignment2.vcproj  sgEvolver.sln  sgEvolver.vcproj
mauve/sgEvolver/src/: Alignment.cpp  Alignment.h  GisSplayTree.h  Makefile.am  gnGapSource.cpp  gnStringSource.cpp  rgradientlegend.R  scoregen.pl  simujobparams.pm
